fixing card image display on safari

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -8,6 +8,7 @@
 }
 
 .card-container {
+    display: block;
     margin-top: 20px;
     margin-bottom: 20px;
 }
